@@ -153,8 +153,8 @@ sub hup_string {
 sub show {
   my $sock = shift;
   my $t = "Ref = \"" .ref($sock) . "\"\n";
-  foreach ( qw(NS_proto NS_port NS_host) ){
-    $t .= "  $_ = \"" .$sock->$_."\"\n";
+  foreach my $prop ( qw(NS_proto NS_port NS_host) ){
+    $t .= "  $prop = \"" .$sock->$prop()."\"\n";
   }
   return $t;
 }
